--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,13 +6,13 @@
 <form method="post">
     {% csrf_token %}
     <div class="mb-3">
-        <label>Username</label>
-        <input class="form-control" name="username" required>
+        <label for="username">Username</label>
+        <input id="username" class="form-control" name="username" required>
     </div>
 
     <div class="mb-3">
-        <label>Password</label>
-        <input class="form-control" type="password" name="password" required>
+        <label for="password">Password</label>
+        <input id="password" class="form-control" type="password" name="password" required>
     </div>
 
     <button class="btn btn-primary w-100 mt-2">Login</button>
